# PoolSync

./: .gitignore  Cargo.toml  README.md  notes.txt  out.txt  src.abi
contracts/src/: BalancerDataSync.sol  BalancerV2DataSync.sol  CurveDataSync.sol  MaverickDataSync.sol  NameSync.sol  PancakeDataSync.sol  SimulatedDataSync.sol  SlipStreamDataSync.sol  TriCurveDataSync.sol  TwoCurveDataSync.sol  UniswapV2DataSync.sol  UniswapV2Sync.sol  UniswapV3DataSync.sol  UniswapV3TickSync.sol  V2DataSync.sol  V2ReserveUpdate.sol  V3DataSync.sol  V3StateUpdate.sol  V3TickBitmapUpdate.sol  V3TickUpdate.sol
examples/: example.rs
oldfiles/: simulated_builder.rs  v3_builder.rs
pool_structures/: Cargo.toml  balancer_v2_structure.rs  v2_structure.rs
pooldexer/: Cargo.toml  config.toml
pooldexer/src/: main.rs  pool_info.rs  pool_type.rs  pooldexer.rs
querypool/: Cargo.toml  bil.rs
querypool/onchain/contract_abis/: V2DataSync.json
querypool/onchain/contracts/src/: LiquidityFilter.sol  V3DataSync.sol
querypool/onchain/pool_abis/: TwoCryptoFactory.json
querypool/pool_database/: mod.rs
querypool/sync_database/: mod.rs
querypool/sync_rpc/: mod.rs
querypool/sync_rpc/pool_fetchers/aerodrome/: aerodrome_fetcher.rs
querypool/sync_rpc/pool_fetchers/alien_base/: alienbase_v2_fetcher.rs
querypool/sync_rpc/pool_fetchers/curve/: tri_crypto.rs  two_crypto.rs
querypool/sync_rpc/pool_fetchers/dackie_swap/: dackieswap_v2_fetcher.rs  mod.rs
querypool/sync_rpc/pool_fetchers/pancake_swap/: mod.rs
querypool/sync_rpc/pool_fetchers/sushiswap/: sushiswap_v3_fetcher.rs
querypool/sync_rpc/pool_fetchers/uniswap/: mod.rs  uniswap_v2_fetcher.rs
src/: builder.rs  cache.rs  chain.rs  constants.rs  data_tests.rs  errors.rs  events.rs  filter.rs  lib.rs  main.rs  pool_factory.rs  pool_info.rs  pool_sync.rs  rpc.rs  snapshot.rs  util.rs
src/abi/: BalancerDataSync.json  LiquidityFilter.json  MaverickDataSync.json  NameSync.json  PancakeDataSync.json  SimulatedDataSync.json  TriCurveDataSync.json  TwoCurveDataSync.json  UniswapV2DataSync.json  UniswapV3DataSync.json  UniswapV3TickSync.json  V2DataSync.json  V2ReserveUpdate.json  V3DataSync.json  V3StateUpdate.json  V3TickBitmapUpdate.json  V3TickUpdate.json
src/onchain/: mod.rs
src/onchain/contract_abis/: BalancerV2DataSync.json  SlipStreamDataSync.json
src/onchain/contracts/src/: BalancerDataSync.sol  TwoCurveDataSync.sol  V2DataSync.sol
src/onchain/pool_abis/: TriCryptoFactory.json
src/pool_database/: mod.rs
src/pool_structures/: balancer_v2_structure.rs  mod.rs  v2_structure.rs  v3_structure.rs
src/pools/: gen.rs  mod.rs  pool_builder.rs  pool_structure.rs  simulated_builder.rs  sushiswap.rs  uniswap_v2.rs  uniswap_v2_fetcher.rs  uniswap_v3.rs  v2_builder.rs  v3_builder.rs
src/pools/abis/: AeordomeV2Factory.json  BalancerV2Factory.json  MaverickV1Factory.json  SlipstreamFactory.json
src/pools/aerodome/: aerodome_fetcher.rs  mod.rs
src/pools/aerodrome/: aerodrome_fetcher.rs  slipstream_fetcher.rs
src/pools/alien_base/: alien_base_fetcher.rs
src/pools/balancer/: balancer_v2.rs
src/pools/base_swap/: baseswap_v2_fetcher.rs  baseswap_v3_fetcher.rs  mod.rs
src/pools/curve/: mod.rs  tri_crypto.rs  two_crypto.rs
src/pools/maverick/: maverick_v1_fetcher.rs  maverick_v2_fetcher.rs  mod.rs
src/pools/pancake_swap/: mod.rs  pancakeswap_v2_fetcher.rs  pancakeswap_v3_fetcher.rs
src/pools/pool_fetchers/: mod.rs
src/pools/pool_fetchers/aerodrome/: aerodrome_fetcher.rs  mod.rs  (+1 more)
src/pools/pool_structures/: balancer_structure.rs  balancer_v2_structure.rs  curve_structure.rs  maverick_structure.rs  mod.rs  tri_crypto_curve_structure.rs  two_crypto_curve_structure.rs  v2_structure.rs  v3_structure.rs
src/pools/sushiswap/: mod.rs  sushiswap_v2_fetcher.rs  sushiswap_v3_fetcher.rs
src/pools/tmp/: pancakeswap_v2.rs  sushiswap_v2.rs
src/pools/uniswap/: mod.rs  uniswap_v2_fetcher.rs  uniswap_v3_fetcher.rs
src/protocol/: constants.rs  mod.rs
src/protocol/traits/: amm_trait.rs  factory_trait.rs  mod.rs
src/protocol/uniswap_v2/: mod.rs  uniswap_v2_factory.rs  uniswap_v2_pool.rs
src/sync/: checkpoint.rs  mod.rs
src/sync_database/: mod.rs
src/sync_rpc/: mod.rs  pool_builder.rs
src/sync_rpc/pool_fetchers/: mod.rs
src/tests/: abi_gen.rs  data_tests.rs  mod.rs
tests/: abi_gen.rs  data_tests.rs  mod.rs
tmp/: aerodome.rs  uniswap_v2.rs
(+44 files in other folders)
