[package]
name = "pool-sync"
version = "0.1.2"
edition = "2021"
authors = ["Zac Holme"]
description = "A library for synchronizing and managing various types of liquidity pools across different blockchains"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Zacholme7/PoolSync"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pool_sync"
path = "src/lib.rs"

[[bin]]
name = "example"
path = "src/bin/example.rs"


[dependencies]
anyhow = "1.0.82"
tokio = {version = "1.37.0", features = ["rt-multi-thread", "macros"]}
dotenv = "0.15.0"
serde = {version = "1.0.203", features = ["derive"]}
async-trait = "0.1.80"
alloy = {version = "0.1.3", features = ["full", "sol-types"]}
indicatif = "0.17.8"
futures = "0.3.30"
thiserror = "1.0.61"
serde_json = "1.0.118"
once_cell = "1.19.0"
alloy-sol-types = "0.7.6"
alloy-sol-macro = "0.7.6"
alloy-contract = "0.1.3"
reqwest = "0.12.5"
