[package]
name = "pool-sync"
version = "3.0.0"
edition = "2021"
authors = ["Zac Holme"]
description = "A library for synchronizing and managing various types of liquidity pools across different blockchains"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Zacholme7/PoolSync"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pool_sync"
path = "src/lib.rs"

[[bin]]
name = "example"
path = "examples/example.rs"

[dependencies]
alloy-contract = "0.14.0"
alloy-dyn-abi = "1.0.0"
alloy-network = "0.14.0"
alloy-primitives = "1.0.0"
alloy-provider = "0.14.0"
alloy-rpc-types = "0.14.0"
alloy-sol-types = { version = "1.0.0", features = ["json"] }
alloy-transport = "0.14.0"

anyhow = "1.0.98"
async-trait = "0.1.88"
chrono = "0.4.40"
dotenv = "0.15.0"

fastrand = "2.3.0"
futures = "0.3.31"
indicatif = "0.17.11"
rusqlite = "0.35.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"

tokio = { version = "1.44.2", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uniswap_v3_math = "0.6.0"



